third_party/move/move-compiler-v2/tests/more-v1/parser/use_with_module.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/use_with_module.move:2:1
  │
2 │ use 0x1::Module;
  │ ^^^ Invalid code unit. Expected 'address', 'module', or 'script'. Got 'use'
